local/logs/project.log
2020-02-05T07:32:02.848Z - normal: Load ~/.CocosCreator/settings.json
2020-02-05T07:32:02.906Z - normal: Initializing Asset Database
2020-02-05T07:32:02.915Z - normal: checking language setting...
2020-02-05T07:32:02.916Z - normal: Language: zh
2020-02-05T07:32:03.550Z - success: preview server running at http://localhost:7456
2020-02-05T07:32:03.560Z - success: protocol editor-framework registered
2020-02-05T07:32:03.560Z - success: protocol app registered
2020-02-05T07:32:03.560Z - success: protocol theme registered
2020-02-05T07:32:03.560Z - success: protocol packages registered
2020-02-05T07:32:03.560Z - success: protocol uuid registerred
2020-02-05T07:32:03.560Z - success: protocol db registerred
2020-02-05T07:32:03.561Z - success: protocol thumbnail registerred
2020-02-05T07:32:03.561Z - success: protocol unpack registerred
2020-02-05T07:32:03.561Z - success: protocol disable-commonjs registerred
2020-02-05T07:32:03.729Z - normal: connected!
2020-02-05T07:32:03.730Z - normal: Check project /Users/haoyun/Documents/CocosProject/Project_T_Client
2020-02-05T07:32:03.731Z - normal: Initializing project /Users/haoyun/Documents/CocosProject/Project_T_Client
2020-02-05T07:32:03.754Z - success: adapters loaded
2020-02-05T07:32:03.759Z - success: asset-db-debugger loaded
2020-02-05T07:32:03.867Z - success: fb-audience-network loaded
2020-02-05T07:32:03.891Z - success: fb-live-stream loaded
2020-02-05T07:32:03.894Z - success: google-play-instant loaded
2020-02-05T07:32:03.907Z - success: huawei-runtime loaded
2020-02-05T07:32:03.909Z - success: jkw-adapter loaded
2020-02-05T07:32:03.911Z - success: jsb-adapter loaded
2020-02-05T07:32:03.924Z - success: oppo-runtime loaded
2020-02-05T07:32:03.930Z - success: package-manager loaded
2020-02-05T07:32:03.932Z - success: qtt-adapter loaded
2020-02-05T07:32:03.945Z - success: runtime-dev-tools loaded
2020-02-05T07:32:03.951Z - success: sdkbox loaded
2020-02-05T07:32:03.956Z - success: ui-kit-preview-extra loaded
2020-02-05T07:32:03.961Z - success: ui-kit-preview loaded
2020-02-05T07:32:03.968Z - success: vivo-runtime loaded
2020-02-05T07:32:03.970Z - success: alipay-minigame loaded
2020-02-05T07:32:04.018Z - success: assets loaded
2020-02-05T07:32:04.020Z - success: baidugame-opendata loaded
2020-02-05T07:32:04.021Z - success: baidugame loaded
2020-02-05T07:32:04.025Z - success: builder loaded
2020-02-05T07:32:04.172Z - success: cocos-services loaded
2020-02-05T07:32:04.175Z - success: console loaded
2020-02-05T07:32:04.184Z - success: fb-instant-games loaded
2020-02-05T07:32:04.187Z - success: game-window loaded
2020-02-05T07:32:04.189Z - success: google-instant-games loaded
2020-02-05T07:32:04.192Z - success: hierarchy loaded
2020-02-05T07:32:04.196Z - success: inspector loaded
2020-02-05T07:32:04.558Z - success: cpk-publish loaded
2020-02-05T07:32:04.560Z - success: keystore loaded
2020-02-05T07:32:04.568Z - success: node-library loaded
2020-02-05T07:32:04.571Z - success: open-recent-items loaded
2020-02-05T07:32:04.575Z - success: package-asset loaded
2020-02-05T07:32:04.583Z - success: preferences loaded
2020-02-05T07:32:04.586Z - success: project-exporter loaded
2020-02-05T07:32:04.590Z - success: project-importer loaded
2020-02-05T07:32:04.592Z - success: project-settings loaded
2020-02-05T07:32:04.605Z - success: qtt-runtime loaded
2020-02-05T07:32:04.609Z - success: scene loaded
2020-02-05T07:32:04.610Z - success: simulator-debugger loaded
2020-02-05T07:32:04.611Z - success: sprite-editor loaded
2020-02-05T07:32:04.614Z - success: store loaded
2020-02-05T07:32:04.618Z - success: timeline loaded
2020-02-05T07:32:04.620Z - success: wechatgame-opendata loaded
2020-02-05T07:32:04.623Z - success: wechatgame loaded
2020-02-05T07:32:04.626Z - success: xiaomi-runtime loaded
2020-02-05T07:32:05.458Z - normal: Initializing Cocos2d
2020-02-05T07:32:06.166Z - normal: Initializing engine extends
2020-02-05T07:32:07.219Z - failed: [db-task][init] Failed to import asset /Users/haoyun/Documents/CocosProject/Project_T_Client/assets/scripts/towerDefens/towers/buildTowerUIMgr.js, message: Compile error: SyntaxError: /Users/haoyun/Documents/CocosProject/Project_T_Client/assets/scripts/towerDefens/towers/buildTowerUIMgr.js: Unexpected token, expected ; (44:18)
  42 |         for (var index in enabledIds) {
  43 |             var id = enabledIds[index]            
> 44 |             二级挤7产 nbygwsjgtluhxhuestfy
     |                   ^
  45 |         }
  46 |     },
  47 | 
    at Parser.pp$5.raise (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:4454:13)
    at Parser.pp.unexpected (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1761:8)
    at Parser.pp.semicolon (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1742:38)
    at Parser.pp$1.parseExpressionStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2236:8)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1911:17)
    at Parser.pp$1.parseBlockBody (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2268:21)
    at Parser.pp$1.parseBlock (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2247:8)
    at Parser.pp$1.parseStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:1868:19)
    at Parser.pp$1.parseForIn (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2326:20)
    at Parser.pp$1.parseForStatement (/Applications/CocosCreator.app/Contents/Resources/app.asar/node_modules/babylon/lib/index.js:2026:21)
2020-02-05T07:32:07.561Z - normal: Loading packages
2020-02-05T07:32:07.568Z - normal: Watching packages
2020-02-05T07:32:07.638Z - info: Cocos Service load base data!
2020-02-05T07:32:07.644Z - normal: Run Application
